adjust spacing on form; change classname to avoid confusion with similar tumblr-form id

--- a/less/tumblr.less
+++ b/less/tumblr.less
@@ -192,7 +192,10 @@ header {
         }
     }
 }
-.tumblr-form {
+#tumblr-form {
+    padding: 11px;
+}
+.tumblr-form-wrap {
     position: absolute;
     top: 44px;
     bottom: 0;
@@ -998,7 +1001,8 @@ header:after, #container:after, .caption_and_post_info:after, footer:after .butt
     .permalink-page {
         #popular { margin: 0; }
     }
-    .tumblr-form {
+    #tumblr-form { padding: 0; }
+    .tumblr-form-wrap {
         .form-photo, .form-options { float: none; width: auto; }
         .form-photo { padding: 11px; }
         .form-customize { padding-bottom: 6px; }
